--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -249,7 +249,10 @@
     "- What in the data is the cause behind the distinctly bright rows?\n",
     "- What causes the columns?\n",
     "\n",
-    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*\n",
+    "$\\color{blue}{\\textit Your Answer:}$ \n",
+    "\n",
+    "- A bright row means that a test image is very different from every training example. For example, a white object with white background (test image 385) has almost all values as 255. Which is very far from an average test image.\n",
+    "- A bright column means that a training image has large distance to every test image. \n",
     "\n"
    ]
   },
